samples/_failures_safe/1761312079_c940c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15b19a5a.c: In function ‘main’:
./samples/SAFE/__tmp_15b19a5a.c:174:9: error: expected expression at end of input
  174 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_15b19a5a.c:174:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_15b19a5a.c:174:9: error: expected declaration or statement at end of input
